[package]
name = "path-filetype"
version = "0.1.0"
authors = ["Jia Chao <jiachao2130@126.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/CC2130/path-filetype"
keywords = ["path", "filetype"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "Rust Path trait to get the filetype."

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
